// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Radio[Base] should render correctly  1`] = `
<div
  class="c-6kjs3c soui-radio-wrapper"
>
  <input
    style="display: none;"
    tabindex="0"
    type="radio"
  />
  <span
    class="c-bmqjip soui-radio-indicator-wrapper"
  >
    <span
      class="c-48u5rw soui-radio-indicator"
      tabindex="1"
    />
  </span>
  <span
    class="c-9af744 soui-radio-desc"
  >
    Option
  </span>
</div>
`;

exports[`Radio[Base] should render correctly about block 1`] = `
<div
  class="c-3srah8 soui-radio-group"
>
  <div
    class="c-6kjs3c soui-radio-wrapper"
  >
    <input
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span
      class="c-bmqjip soui-radio-indicator-wrapper"
    >
      <span
        class="c-48u5rw soui-radio-indicator"
        tabindex="1"
      />
    </span>
    <span
      class="c-9af744 soui-radio-desc"
    >
      red
    </span>
  </div>
  <div
    class="c-6kjs3c soui-radio-wrapper"
  >
    <input
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span
      class="c-bmqjip soui-radio-indicator-wrapper"
    >
      <span
        class="c-48u5rw soui-radio-indicator"
        tabindex="1"
      />
    </span>
    <span
      class="c-9af744 soui-radio-desc"
    >
      orange
    </span>
  </div>
  <div
    class="c-6kjs3c soui-radio-wrapper c-ds7wjl soui-radio-wrapper-checked"
  >
    <input
      checked=""
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span
      class="c-bmqjip soui-radio-indicator-wrapper"
    >
      <span
        class="c-48u5rw soui-radio-indicator"
        tabindex="1"
      />
    </span>
    <span
      class="c-9af744 soui-radio-desc"
    >
      yellow
    </span>
  </div>
  <div
    class="c-6kjs3c soui-radio-wrapper"
  >
    <input
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span
      class="c-bmqjip soui-radio-indicator-wrapper"
    >
      <span
        class="c-48u5rw soui-radio-indicator"
        tabindex="1"
      />
    </span>
    <span
      class="c-9af744 soui-radio-desc"
    >
      green
    </span>
  </div>
  <div
    class="c-6kjs3c soui-radio-wrapper"
  >
    <input
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span
      class="c-bmqjip soui-radio-indicator-wrapper"
    >
      <span
        class="c-48u5rw soui-radio-indicator"
        tabindex="1"
      />
    </span>
    <span
      class="c-9af744 soui-radio-desc"
    >
      cyan
    </span>
  </div>
  <div
    class="c-6kjs3c soui-radio-wrapper"
  >
    <input
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span
      class="c-bmqjip soui-radio-indicator-wrapper"
    >
      <span
        class="c-48u5rw soui-radio-indicator"
        tabindex="1"
      />
    </span>
    <span
      class="c-9af744 soui-radio-desc"
    >
      blue
    </span>
  </div>
  <div
    class="c-6kjs3c soui-radio-wrapper"
  >
    <input
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span
      class="c-bmqjip soui-radio-indicator-wrapper"
    >
      <span
        class="c-48u5rw soui-radio-indicator"
        tabindex="1"
      />
    </span>
    <span
      class="c-9af744 soui-radio-desc"
    >
      violet
    </span>
  </div>
</div>
`;

exports[`Radio[Base] should render correctly about button 1`] = `
<div
  class="c-3srah8 soui-radio-group c-4lnaey soui-radio-group-button c-cee8ub soui-button-group"
  dir="ltr"
>
  <button
    class="c-6kjs3c soui-radio-wrapper c-7m0wge soui-button-secondary c-vk6w5o soui-button-button"
    dir="ltr"
    type="button"
  >
    <input
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span>
      Monday
    </span>
  </button>
  <button
    class="c-6kjs3c soui-radio-wrapper c-7m0wge soui-button-secondary c-vk6w5o soui-button-button"
    dir="ltr"
    type="button"
  >
    <input
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span>
      Tuesday
    </span>
  </button>
  <button
    class="c-6kjs3c soui-radio-wrapper c-ds7wjl soui-radio-wrapper-checked c6ujj5s soui-button-primary c-vk6w5o soui-button-button"
    dir="ltr"
    type="button"
  >
    <input
      checked=""
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span>
      Wednesday
    </span>
  </button>
  <button
    class="c-6kjs3c soui-radio-wrapper c-7m0wge soui-button-secondary c-vk6w5o soui-button-button"
    dir="ltr"
    type="button"
  >
    <input
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span>
      Thursday
    </span>
  </button>
  <button
    class="c-6kjs3c soui-radio-wrapper c-7m0wge soui-button-secondary c-vk6w5o soui-button-button"
    dir="ltr"
    type="button"
  >
    <input
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span>
      Friday
    </span>
  </button>
  <button
    class="c-6kjs3c soui-radio-wrapper c-7m0wge soui-button-secondary c-vk6w5o soui-button-button"
    dir="ltr"
    type="button"
  >
    <input
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span>
      Saturday
    </span>
  </button>
  <button
    class="c-6kjs3c soui-radio-wrapper c-7m0wge soui-button-secondary c-vk6w5o soui-button-button"
    dir="ltr"
    type="button"
  >
    <input
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span>
      Sunday
    </span>
  </button>
</div>
`;

exports[`Radio[Base] should render correctly about button outline 1`] = `
<div
  class="c-3srah8 soui-radio-group c-4lnaey soui-radio-group-button c-cee8ub soui-button-group"
  dir="ltr"
>
  <button
    class="c-6kjs3c soui-radio-wrapper c-7m0wge soui-button-secondary c-vk6w5o soui-button-button c-68omio soui-button-outline"
    dir="ltr"
    type="button"
  >
    <input
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span>
      Monday
    </span>
  </button>
  <button
    class="c-6kjs3c soui-radio-wrapper c-7m0wge soui-button-secondary c-vk6w5o soui-button-button c-68omio soui-button-outline"
    dir="ltr"
    type="button"
  >
    <input
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span>
      Tuesday
    </span>
  </button>
  <button
    class="c-6kjs3c soui-radio-wrapper c-ds7wjl soui-radio-wrapper-checked c6ujj5s soui-button-primary c-vk6w5o soui-button-button c-68omio soui-button-outline"
    dir="ltr"
    type="button"
  >
    <input
      checked=""
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span>
      Wednesday
    </span>
  </button>
  <button
    class="c-6kjs3c soui-radio-wrapper c-7m0wge soui-button-secondary c-vk6w5o soui-button-button c-68omio soui-button-outline"
    dir="ltr"
    type="button"
  >
    <input
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span>
      Thursday
    </span>
  </button>
  <button
    class="c-6kjs3c soui-radio-wrapper c-7m0wge soui-button-secondary c-vk6w5o soui-button-button c-68omio soui-button-outline"
    dir="ltr"
    type="button"
  >
    <input
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span>
      Friday
    </span>
  </button>
  <button
    class="c-6kjs3c soui-radio-wrapper c-7m0wge soui-button-secondary c-vk6w5o soui-button-button c-68omio soui-button-outline"
    dir="ltr"
    type="button"
  >
    <input
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span>
      Saturday
    </span>
  </button>
  <button
    class="c-6kjs3c soui-radio-wrapper c-7m0wge soui-button-secondary c-vk6w5o soui-button-button c-68omio soui-button-outline"
    dir="ltr"
    type="button"
  >
    <input
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span>
      Sunday
    </span>
  </button>
</div>
`;

exports[`Radio[Base] should render correctly about cancel 1`] = `
<div
  class="c-3srah8 soui-radio-group"
>
  <div
    class="c-6kjs3c soui-radio-wrapper c-ds7wjl soui-radio-wrapper-checked"
  >
    <input
      checked=""
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span
      class="c-bmqjip soui-radio-indicator-wrapper"
    >
      <span
        class="c-48u5rw soui-radio-indicator"
        tabindex="1"
      />
    </span>
    <span
      class="c-9af744 soui-radio-desc"
    >
      red
    </span>
  </div>
  <div
    class="c-6kjs3c soui-radio-wrapper"
  >
    <input
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span
      class="c-bmqjip soui-radio-indicator-wrapper"
    >
      <span
        class="c-48u5rw soui-radio-indicator"
        tabindex="1"
      />
    </span>
    <span
      class="c-9af744 soui-radio-desc"
    >
      orange
    </span>
  </div>
  <div
    class="c-6kjs3c soui-radio-wrapper"
  >
    <input
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span
      class="c-bmqjip soui-radio-indicator-wrapper"
    >
      <span
        class="c-48u5rw soui-radio-indicator"
        tabindex="1"
      />
    </span>
    <span
      class="c-9af744 soui-radio-desc"
    >
      yellow
    </span>
  </div>
  <div
    class="c-6kjs3c soui-radio-wrapper"
  >
    <input
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span
      class="c-bmqjip soui-radio-indicator-wrapper"
    >
      <span
        class="c-48u5rw soui-radio-indicator"
        tabindex="1"
      />
    </span>
    <span
      class="c-9af744 soui-radio-desc"
    >
      green
    </span>
  </div>
  <div
    class="c-6kjs3c soui-radio-wrapper"
  >
    <input
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span
      class="c-bmqjip soui-radio-indicator-wrapper"
    >
      <span
        class="c-48u5rw soui-radio-indicator"
        tabindex="1"
      />
    </span>
    <span
      class="c-9af744 soui-radio-desc"
    >
      cyan
    </span>
  </div>
  <div
    class="c-6kjs3c soui-radio-wrapper"
  >
    <input
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span
      class="c-bmqjip soui-radio-indicator-wrapper"
    >
      <span
        class="c-48u5rw soui-radio-indicator"
        tabindex="1"
      />
    </span>
    <span
      class="c-9af744 soui-radio-desc"
    >
      blue
    </span>
  </div>
  <div
    class="c-6kjs3c soui-radio-wrapper"
  >
    <input
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span
      class="c-bmqjip soui-radio-indicator-wrapper"
    >
      <span
        class="c-48u5rw soui-radio-indicator"
        tabindex="1"
      />
    </span>
    <span
      class="c-9af744 soui-radio-desc"
    >
      violet
    </span>
  </div>
</div>
`;

exports[`Radio[Base] should render correctly about disabled 1`] = `
<div
  class="c-3srah8 soui-radio-group"
>
  <div
    class="c-6kjs3c soui-radio-wrapper c-m1ugyk soui-radio-wrapper-disabled"
  >
    <input
      disabled=""
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span
      class="c-bmqjip soui-radio-indicator-wrapper"
    >
      <span
        class="c-48u5rw soui-radio-indicator"
        tabindex="-1"
      />
    </span>
    <span
      class="c-9af744 soui-radio-desc"
    >
      red
    </span>
  </div>
  <div
    class="c-6kjs3c soui-radio-wrapper c-m1ugyk soui-radio-wrapper-disabled"
  >
    <input
      disabled=""
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span
      class="c-bmqjip soui-radio-indicator-wrapper"
    >
      <span
        class="c-48u5rw soui-radio-indicator"
        tabindex="-1"
      />
    </span>
    <span
      class="c-9af744 soui-radio-desc"
    >
      orange
    </span>
  </div>
  <div
    class="c-6kjs3c soui-radio-wrapper c-m1ugyk soui-radio-wrapper-disabled"
  >
    <input
      disabled=""
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span
      class="c-bmqjip soui-radio-indicator-wrapper"
    >
      <span
        class="c-48u5rw soui-radio-indicator"
        tabindex="-1"
      />
    </span>
    <span
      class="c-9af744 soui-radio-desc"
    >
      yellow
    </span>
  </div>
  <div
    class="c-6kjs3c soui-radio-wrapper c-m1ugyk soui-radio-wrapper-disabled"
  >
    <input
      disabled=""
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span
      class="c-bmqjip soui-radio-indicator-wrapper"
    >
      <span
        class="c-48u5rw soui-radio-indicator"
        tabindex="-1"
      />
    </span>
    <span
      class="c-9af744 soui-radio-desc"
    >
      green
    </span>
  </div>
  <div
    class="c-6kjs3c soui-radio-wrapper c-m1ugyk soui-radio-wrapper-disabled"
  >
    <input
      disabled=""
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span
      class="c-bmqjip soui-radio-indicator-wrapper"
    >
      <span
        class="c-48u5rw soui-radio-indicator"
        tabindex="-1"
      />
    </span>
    <span
      class="c-9af744 soui-radio-desc"
    >
      cyan
    </span>
  </div>
  <div
    class="c-6kjs3c soui-radio-wrapper c-m1ugyk soui-radio-wrapper-disabled c-ds7wjl soui-radio-wrapper-checked"
  >
    <input
      checked=""
      disabled=""
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span
      class="c-bmqjip soui-radio-indicator-wrapper"
    >
      <span
        class="c-48u5rw soui-radio-indicator"
        tabindex="-1"
      />
    </span>
    <span
      class="c-9af744 soui-radio-desc"
    >
      blue
    </span>
  </div>
  <div
    class="c-6kjs3c soui-radio-wrapper c-m1ugyk soui-radio-wrapper-disabled"
  >
    <input
      disabled=""
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span
      class="c-bmqjip soui-radio-indicator-wrapper"
    >
      <span
        class="c-48u5rw soui-radio-indicator"
        tabindex="-1"
      />
    </span>
    <span
      class="c-9af744 soui-radio-desc"
    >
      violet
    </span>
  </div>
</div>
`;

exports[`Radio[Base] should render correctly about disabled func 1`] = `
<div
  class="c-3srah8 soui-radio-group"
>
  <div
    class="c-6kjs3c soui-radio-wrapper"
  >
    <input
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span
      class="c-bmqjip soui-radio-indicator-wrapper"
    >
      <span
        class="c-48u5rw soui-radio-indicator"
        tabindex="1"
      />
    </span>
    <span
      class="c-9af744 soui-radio-desc"
    >
      red
    </span>
  </div>
  <div
    class="c-6kjs3c soui-radio-wrapper"
  >
    <input
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span
      class="c-bmqjip soui-radio-indicator-wrapper"
    >
      <span
        class="c-48u5rw soui-radio-indicator"
        tabindex="1"
      />
    </span>
    <span
      class="c-9af744 soui-radio-desc"
    >
      orange
    </span>
  </div>
  <div
    class="c-6kjs3c soui-radio-wrapper c-m1ugyk soui-radio-wrapper-disabled"
  >
    <input
      disabled=""
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span
      class="c-bmqjip soui-radio-indicator-wrapper"
    >
      <span
        class="c-48u5rw soui-radio-indicator"
        tabindex="-1"
      />
    </span>
    <span
      class="c-9af744 soui-radio-desc"
    >
      yellow
    </span>
  </div>
  <div
    class="c-6kjs3c soui-radio-wrapper"
  >
    <input
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span
      class="c-bmqjip soui-radio-indicator-wrapper"
    >
      <span
        class="c-48u5rw soui-radio-indicator"
        tabindex="1"
      />
    </span>
    <span
      class="c-9af744 soui-radio-desc"
    >
      green
    </span>
  </div>
  <div
    class="c-6kjs3c soui-radio-wrapper"
  >
    <input
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span
      class="c-bmqjip soui-radio-indicator-wrapper"
    >
      <span
        class="c-48u5rw soui-radio-indicator"
        tabindex="1"
      />
    </span>
    <span
      class="c-9af744 soui-radio-desc"
    >
      cyan
    </span>
  </div>
  <div
    class="c-6kjs3c soui-radio-wrapper c-ds7wjl soui-radio-wrapper-checked"
  >
    <input
      checked=""
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span
      class="c-bmqjip soui-radio-indicator-wrapper"
    >
      <span
        class="c-48u5rw soui-radio-indicator"
        tabindex="1"
      />
    </span>
    <span
      class="c-9af744 soui-radio-desc"
    >
      blue
    </span>
  </div>
  <div
    class="c-6kjs3c soui-radio-wrapper"
  >
    <input
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span
      class="c-bmqjip soui-radio-indicator-wrapper"
    >
      <span
        class="c-48u5rw soui-radio-indicator"
        tabindex="1"
      />
    </span>
    <span
      class="c-9af744 soui-radio-desc"
    >
      violet
    </span>
  </div>
</div>
`;

exports[`Radio[Base] should render correctly about group 1`] = `
<div
  class="c-3srah8 soui-radio-group"
>
  <div
    class="c-6kjs3c soui-radio-wrapper"
  >
    <input
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span
      class="c-bmqjip soui-radio-indicator-wrapper"
    >
      <span
        class="c-48u5rw soui-radio-indicator"
        tabindex="1"
      />
    </span>
    <span
      class="c-9af744 soui-radio-desc"
    >
      red
    </span>
  </div>
  <div
    class="c-6kjs3c soui-radio-wrapper"
  >
    <input
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span
      class="c-bmqjip soui-radio-indicator-wrapper"
    >
      <span
        class="c-48u5rw soui-radio-indicator"
        tabindex="1"
      />
    </span>
    <span
      class="c-9af744 soui-radio-desc"
    >
      orange
    </span>
  </div>
  <div
    class="c-6kjs3c soui-radio-wrapper"
  >
    <input
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span
      class="c-bmqjip soui-radio-indicator-wrapper"
    >
      <span
        class="c-48u5rw soui-radio-indicator"
        tabindex="1"
      />
    </span>
    <span
      class="c-9af744 soui-radio-desc"
    >
      yellow
    </span>
  </div>
  <div
    class="c-6kjs3c soui-radio-wrapper"
  >
    <input
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span
      class="c-bmqjip soui-radio-indicator-wrapper"
    >
      <span
        class="c-48u5rw soui-radio-indicator"
        tabindex="1"
      />
    </span>
    <span
      class="c-9af744 soui-radio-desc"
    >
      green
    </span>
  </div>
  <div
    class="c-6kjs3c soui-radio-wrapper"
  >
    <input
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span
      class="c-bmqjip soui-radio-indicator-wrapper"
    >
      <span
        class="c-48u5rw soui-radio-indicator"
        tabindex="1"
      />
    </span>
    <span
      class="c-9af744 soui-radio-desc"
    >
      cyan
    </span>
  </div>
  <div
    class="c-6kjs3c soui-radio-wrapper c-ds7wjl soui-radio-wrapper-checked"
  >
    <input
      checked=""
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span
      class="c-bmqjip soui-radio-indicator-wrapper"
    >
      <span
        class="c-48u5rw soui-radio-indicator"
        tabindex="1"
      />
    </span>
    <span
      class="c-9af744 soui-radio-desc"
    >
      blue
    </span>
  </div>
  <div
    class="c-6kjs3c soui-radio-wrapper"
  >
    <input
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span
      class="c-bmqjip soui-radio-indicator-wrapper"
    >
      <span
        class="c-48u5rw soui-radio-indicator"
        tabindex="1"
      />
    </span>
    <span
      class="c-9af744 soui-radio-desc"
    >
      violet
    </span>
  </div>
</div>
`;

exports[`Radio[Base] should render correctly about group children 1`] = `
<div
  class="c-3srah8 soui-radio-group"
>
  <div
    class="c-6kjs3c soui-radio-wrapper"
  >
    <input
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span
      class="c-bmqjip soui-radio-indicator-wrapper"
    >
      <span
        class="c-48u5rw soui-radio-indicator"
        tabindex="1"
      />
    </span>
    <span
      class="c-9af744 soui-radio-desc"
    >
      red
    </span>
  </div>
  <div
    class="c-6kjs3c soui-radio-wrapper"
  >
    <input
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span
      class="c-bmqjip soui-radio-indicator-wrapper"
    >
      <span
        class="c-48u5rw soui-radio-indicator"
        tabindex="1"
      />
    </span>
    <span
      class="c-9af744 soui-radio-desc"
    >
      orange
    </span>
  </div>
  <div
    class="c-6kjs3c soui-radio-wrapper c-ds7wjl soui-radio-wrapper-checked"
  >
    <input
      checked=""
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span
      class="c-bmqjip soui-radio-indicator-wrapper"
    >
      <span
        class="c-48u5rw soui-radio-indicator"
        tabindex="1"
      />
    </span>
    <span
      class="c-9af744 soui-radio-desc"
    >
      yellow
    </span>
  </div>
  <div
    class="c-6kjs3c soui-radio-wrapper"
  >
    <input
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span
      class="c-bmqjip soui-radio-indicator-wrapper"
    >
      <span
        class="c-48u5rw soui-radio-indicator"
        tabindex="1"
      />
    </span>
    <span
      class="c-9af744 soui-radio-desc"
    >
      green
    </span>
  </div>
  <div
    class="c-6kjs3c soui-radio-wrapper"
  >
    <input
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span
      class="c-bmqjip soui-radio-indicator-wrapper"
    >
      <span
        class="c-48u5rw soui-radio-indicator"
        tabindex="1"
      />
    </span>
    <span
      class="c-9af744 soui-radio-desc"
    >
      cyan
    </span>
  </div>
  <div
    class="c-6kjs3c soui-radio-wrapper"
  >
    <input
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span
      class="c-bmqjip soui-radio-indicator-wrapper"
    >
      <span
        class="c-48u5rw soui-radio-indicator"
        tabindex="1"
      />
    </span>
    <span
      class="c-9af744 soui-radio-desc"
    >
      blue
    </span>
  </div>
  <div
    class="c-6kjs3c soui-radio-wrapper"
  >
    <input
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span
      class="c-bmqjip soui-radio-indicator-wrapper"
    >
      <span
        class="c-48u5rw soui-radio-indicator"
        tabindex="1"
      />
    </span>
    <span
      class="c-9af744 soui-radio-desc"
    >
      violet
    </span>
  </div>
</div>
`;

exports[`Radio[Base] should render correctly about size 1`] = `
<div>
  <div
    class="c-3srah8 soui-radio-group c-4lnaey soui-radio-group-button c-cee8ub soui-button-group"
    dir="ltr"
  >
    <button
      class="c-6kjs3c soui-radio-wrapper c-ds7wjl soui-radio-wrapper-checked c6ujj5s soui-button-primary c-vk6w5o soui-button-button c-c7w797 soui-button-small"
      dir="ltr"
      type="button"
    >
      <input
        checked=""
        style="display: none;"
        tabindex="0"
        type="radio"
      />
      <span>
        red
      </span>
    </button>
    <button
      class="c-6kjs3c soui-radio-wrapper c-7m0wge soui-button-secondary c-vk6w5o soui-button-button c-c7w797 soui-button-small"
      dir="ltr"
      type="button"
    >
      <input
        style="display: none;"
        tabindex="0"
        type="radio"
      />
      <span>
        orange
      </span>
    </button>
    <button
      class="c-6kjs3c soui-radio-wrapper c-7m0wge soui-button-secondary c-vk6w5o soui-button-button c-c7w797 soui-button-small"
      dir="ltr"
      type="button"
    >
      <input
        style="display: none;"
        tabindex="0"
        type="radio"
      />
      <span>
        yellow
      </span>
    </button>
  </div>
  <br />
  <div
    class="c-3srah8 soui-radio-group c-4lnaey soui-radio-group-button c-cee8ub soui-button-group"
    dir="ltr"
    style="margin-top: 24px;"
  >
    <button
      class="c-6kjs3c soui-radio-wrapper c-ds7wjl soui-radio-wrapper-checked c6ujj5s soui-button-primary c-vk6w5o soui-button-button"
      dir="ltr"
      type="button"
    >
      <input
        checked=""
        style="display: none;"
        tabindex="0"
        type="radio"
      />
      <span>
        red
      </span>
    </button>
    <button
      class="c-6kjs3c soui-radio-wrapper c-7m0wge soui-button-secondary c-vk6w5o soui-button-button"
      dir="ltr"
      type="button"
    >
      <input
        style="display: none;"
        tabindex="0"
        type="radio"
      />
      <span>
        orange
      </span>
    </button>
    <button
      class="c-6kjs3c soui-radio-wrapper c-7m0wge soui-button-secondary c-vk6w5o soui-button-button"
      dir="ltr"
      type="button"
    >
      <input
        style="display: none;"
        tabindex="0"
        type="radio"
      />
      <span>
        yellow
      </span>
    </button>
  </div>
  <br />
  <div
    class="c-3srah8 soui-radio-group c-4lnaey soui-radio-group-button c-cee8ub soui-button-group"
    dir="ltr"
    style="margin-top: 24px;"
  >
    <button
      class="c-6kjs3c soui-radio-wrapper c-ds7wjl soui-radio-wrapper-checked c6ujj5s soui-button-primary c-vk6w5o soui-button-button c-cby2rr soui-button-large"
      dir="ltr"
      type="button"
    >
      <input
        checked=""
        style="display: none;"
        tabindex="0"
        type="radio"
      />
      <span>
        red
      </span>
    </button>
    <button
      class="c-6kjs3c soui-radio-wrapper c-7m0wge soui-button-secondary c-vk6w5o soui-button-button c-cby2rr soui-button-large"
      dir="ltr"
      type="button"
    >
      <input
        style="display: none;"
        tabindex="0"
        type="radio"
      />
      <span>
        orange
      </span>
    </button>
    <button
      class="c-6kjs3c soui-radio-wrapper c-7m0wge soui-button-secondary c-vk6w5o soui-button-button c-cby2rr soui-button-large"
      dir="ltr"
      type="button"
    >
      <input
        style="display: none;"
        tabindex="0"
        type="radio"
      />
      <span>
        yellow
      </span>
    </button>
  </div>
  <br />
</div>
`;

exports[`Radio[Base] should render correctly about status 1`] = `
<div
  class="c-6kjs3c soui-radio-wrapper"
>
  <input
    style="display: none;"
    tabindex="0"
    type="radio"
  />
  <span
    class="c-bmqjip soui-radio-indicator-wrapper"
  >
    <span
      class="c-48u5rw soui-radio-indicator"
      tabindex="1"
    />
  </span>
  <span
    class="c-9af744 soui-radio-desc"
  >
    OptionA
  </span>
</div>
`;
